--- a/StarPhoneWebsite/StarPhoneWebsite/Views/Shared/_MainLayout.cshtml
+++ b/StarPhoneWebsite/StarPhoneWebsite/Views/Shared/_MainLayout.cshtml
@@ -11,7 +11,7 @@
     <meta name="description" content="Free Bootstrap Themes by Zerotheme dot com - Free Responsive Html5 Templates">
     <meta name="author" content="https://www.Zerotheme.com">
 
-    <title>Mobile Shop</title>
+    <title>Mobile Store</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="~/Assets/css/bootstrap.min.css" type="text/css">
