--- a/StarPhoneWebsite/StarPhoneWebsite/Views/Shop/Details.cshtml
+++ b/StarPhoneWebsite/StarPhoneWebsite/Views/Shop/Details.cshtml
@@ -153,7 +153,7 @@
                                     <a class="btn compare" href="#"><span class="glyphicon glyphicon-transfer"></span></a>
                                 </div>
                                 <div class="caption">
-                                    <div class="name"><h3><a href="product.html">Aliquam erat volutpat</a></div>
+                                    <div class="name"><h3><a href="product.html">Aliquam erat volutpat</a></h3></div>
                                     <div class="price">$122<span>$98</span></div>
                                     <div class="rating"><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span></div>
                                 </div>
